--- a/src/static/index.html
+++ b/src/static/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5"/>
     <title>Ship</title>
     <link rel="shortcut icon" href="/favicon.ico" />
     <style>
